    distribution anymore. Instead use the ``oldwinapi`` Nimble package.
  - There is now a clear distinction between ``--os:standalone``
    and ``--gc:none``. So if you use ``--os:standalone`` ensure you also use
    ``--gc:none``. ``--os:standalone`` without ``--gc:none`` is now a version
    that doesn't depend on any OS but includes the GC. However this version
    is currently untested!


  Library additions
  -----------------

  - The nre module has been added, providing a better interface to PCRE than
    re.

  Language Additions
  ------------------


  Bugfixes
  --------


2015-05-04 Version 0.11.2 released
==================================

This is just a bugfix release that fixes the most pressing regressions we
introduced with version 0.11.0. The way types are computed was
changed significantly causing all sort of problems. Sorry for the
inconvenience; we grew overconfident our large test suite would prevent these
things.


2015-04-30 Version 0.11.0 released
==================================

With this release we are one step closer to reaching version 1.0 and by
extension the persistence of the Nim specification. As mentioned in the
previous release notes, starting with version 1.0, we will not be introducing
any more breaking changes to Nim.

The *language* itself is very close to 1.0, the primary area that requires
more work is the standard library.

Take a look at the `download <download.html>`_ page for binaries (Windows-only)
and 0.11.0 snapshots of the source code. The Windows installer now also
includes `Aporia <https://github.com/nim-lang/aporia>`_,
`Nimble <https://github.com/nim-lang/nimble>`_ and other useful tools to get
you started with Nim.

What's left to be done
~~~~~~~~~~~~~~~~~~~~~~

The 1.0 release is expected by the end of this year. Rumors say it will be in
summer 2015. What's left:

* Bug fixes, bug fixes, bug fixes, in particular:
  - The remaining bugs of the lambda lifting pass that is responsible to enable